@@ -676,7 +676,6 @@
     "*://*.waz.de/*",
     "*://*.weeklytimesnow.com.au/*",
     "*://*.wellandtribune.ca/*",
-    "*://*.weltkunst.de/*",
     "*://*.westernadvocate.com.au/*",
     "*://*.westfalen-blatt.de/*",
     "*://*.wiesbadener-kurier.de/*",
