@@ -2,6 +2,7 @@
 Changelog Bypass Paywalls Clean - Chrome
 
 Post-release
+Remove Weltkunst.de (fix obsolete)
 
 * v3.1.9.0 (2023-05-21)
 Remove (custom) Substack (fix obsolete)
